--- a/udagram-api/package.json
+++ b/udagram-api/package.json
@@ -2,7 +2,7 @@
 	"name": "udagram-api",
 	"version": "2.0.0",
 	"description": "",
-	"main": "www/server.js",
+	"main": "./www/server.js",
 	"scripts": {
 		"start": "node .",
 		"tsc": "tsc",
@@ -11,7 +11,8 @@
 		"clean": "rm -rf www/ || true",
 		"build": "npm run clean && tsc && cp -rf src/config www/config && cp .npmrc www/.npmrc && cp package.json www/package.json",
 		"archive": "cd www && zip -r Archive.zip . && cd ..",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"deploy": "chmod +x ./bin/deploy.sh && ./bin/deploy.sh"
 	},
 	"keywords": [],
 	"author": "Gabriel Ruttner",
