--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,11 @@ orbs:
     aws-cli: circleci/aws-cli@2.0.2
 jobs:
     build:
+        filters:
+            branches:
+                only:
+                    - main
+                    - master
         docker:
             - image: "cimg/base:stable"
         steps:
